# keiba-ai

./: .gitignore  CLAUDE.md  README.md  requirements.txt
config/: settings.py
docs/: TODO_IMPROVEMENTS.md  TODO_PERFORMANCE.md
notebooks/: 01_data_exploration.ipynb
scripts/: export_historical_to_csv.py  export_onnx.py  generate_sire_stats.py  process_historical_features.py  retrain.py  run_validation.py  scrape_odds_only.py
src/api/: Cargo.toml  README.md
src/api/data/cache/scraper/horse/: 2017104756.json  2018104638.json  2018104942.json  2019105346.json  2020100680.json  2020103532.json  2020105786.json  2021103272.json  2021104756.json  2021105143.json  2021105369.json  2021105898.json  2021106787.json  2021110048.json  2022104614.json  2022105081.json
src/api/data/cache/scraper/jockey/: 00666.json  01088.json  01091.json  01096.json  01102.json  01126.json  01157.json  01160.json  01163.json  01170.json  01171.json  01180.json  01191.json  05339.json  05386.json  05473.json
src/api/data/cache/scraper/race_card/: 202506050801.json  202506050811.json  202606010101.json  202606010102.json  202606010103.json  202606010104.json  202606010105.json  202606010106.json  202606010107.json  202606010108.json  202606010109.json  202606010110.json  202606010111.json  202606010112.json  202608010101.json  202608010102.json  202608010103.json  202608010104.json  202608010105.json  202608010106.json  202608010107.json  202608010108.json  202608010109.json  202608010110.json  202608010111.json  202608010112.json
src/api/data/cache/scraper/trainer/: 01061.json  01070.json  01075.json  01110.json  01126.json  01128.json  01140.json  01157.json  01159.json  01164.json  01165.json  01169.json  01185.json  01210.json
src/api/scripts/: prepare_backtest_data.py
src/api/src/: backtest.rs  betting.rs  calibration.rs  cli.rs  config.rs  exacta.rs  main.rs  model.rs  quinella.rs  retry.rs  routes.rs  trifecta.rs  trio.rs  types.rs  wide.rs
src/api/src/scraper/: browser.rs  cache.rs  feature_builder.rs  mod.rs  rate_limiter.rs  sire_stats.rs
src/api/src/scraper/historical/: mod.rs  odds_history.rs  race_list.rs  race_result.rs
src/api/src/scraper/parsers/: horse.rs  jockey.rs  mod.rs  odds.rs  race_card.rs  trainer.rs
src/api/src/storage/: mod.rs  repository.rs  schema.rs
src/api/tests/fixtures/: jockey_sample.html  race_card_sample.html  trainer_sample.html
(+91 files in other folders)
