[package]
name = "keiba-api"
version = "0.1.0"
edition = "2021"
description = "Keiba-AI inference API for horse racing predictions"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ONNX Runtime
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"

# Data processing (for backtest)
polars = { version = "0.45", features = ["parquet", "csv", "lazy"] }
chrono = { version = "0.4", features = ["serde"] }

# SQLite storage (for historical data)
rusqlite = { version = "0.32", features = ["bundled"] }

# Scraper (browser automation and HTML parsing)
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
scraper = "0.22"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
